# lnkr-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Justfile  README.md  alembic.ini  asgi.py  healthcheck.py  pyproject.toml  ruff.toml
.github/linters/: .checkov.yml  .megalinter.yml  .trivyignore.yaml  .v8rrc.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 2026_04_25_2132-287ecee0d6d5_initial.py  2026_05_21_2020-008fdeef2f94_add_link_status_and_expiration.py  2026_05_25_1932-36fe93a6ad47_add_link_password_hash.py  2026_05_28_1913-7d142b1fc731_add_click_country_code.py  2026_06_27_1429-324b639f0d37_add_user_agent_header.py  2026_07_12_1805-c73e9ec5e9b7_add_link_favorite.py
deployment/: .env.common  .env.development  .env.production  Dockerfile.development  Dockerfile.production  compose.development.yml  compose.production.yml  playbook.yml
deployment/ansible/: example.inventory.ini  playbook.yml
deployment/ansible/files/postgres/: compose.yml
deployment/ansible/files/redis/: compose.yml
deployment/ansible/files/traefik/: compose.yml  traefik.yml
deployment/ansible/tasks/: docker.yml  geoip.yml  lnkr.yml  postgres.yml  redis.yml  traefik.yml
deployment/ansible/templates/postgres/: database-backup.sh.j2
deployment/ansible/templates/traefik/: ratelimit.toml.j2
scripts/: run-database-migrations.sh  update-geoip-database.sh
src/lnkr/: config.py  exceptions.py  main.py
src/lnkr/api/: main.py
src/lnkr/api/dependencies/: __init__.py  auth.py  cache.py  database.py  frontend.py  geoip.py  header.py  pagination.py  smtp.py  timezone.py
src/lnkr/api/routes/: auth_route.py  click_route.py  forward_route.py  health_route.py  link_route.py  user_route.py
src/lnkr/cache/: link_cache.py
src/lnkr/config/: __init__.py  application_settings.py  database_settings.py
src/lnkr/database/: __init__.py  click_database.py  initial_data.py  link_database.py  login_token_database.py  user_database.py
src/lnkr/database/tokens/: login_token_database.py  refresh_token_database.py
src/lnkr/models/: __init__.py  access_token_model.py  base.py  click_model.py  constraints.py  header_model.py  link_model.py  login_token_model.py  pagination_model.py  user_model.py
src/lnkr/models/tokens/: __init__.py  access_token_model.py  login_token_model.py  refresh_token_model.py
src/lnkr/services/: access_token_service.py  click_service.py  email_service.py  geoip_service.py  link_service.py  login_token_service.py  user_service.py
src/lnkr/services/tokens/: access_token_service.py  login_token_service.py  refresh_token_service.py
templates/email/: layout.html.j2  login_token.html.j2
tests/: config_test.py  conftest.py
tests/api/: conftest.py
tests/api/dependencies/: auth_test.py  frontend_test.py  header_test.py  pagination_test.py
tests/api/routes/: conftest.py
tests/api/routes/auth_route/: conftest.py  refresh_auth_tokens_endpoint_test.py  request_login_token_endpoint_test.py  revoke_refresh_token_endpoint_test.py  verify_login_token_endpoint_test.py
tests/api/routes/click_route/: list_clicks_endpoint_test.py
tests/api/routes/forward_route/: conftest.py  forward_to_target_url_endpoint_test.py  unlock_target_url_endpoint_test.py
tests/api/routes/health_route/: health_check_endpoint_test.py
tests/api/routes/link_route/: create_link_endpoint_test.py  delete_link_endpoint_test.py  generate_random_slug_endpoint_test.py  get_link_endpoint_test.py  get_link_qr_code_endpoint_test.py  list_links_endpoint_test.py  update_link_endpoint_test.py
tests/api/routes/user_route/: get_user_endpoint_test.py
tests/cache/: conftest.py  link_cache_test.py
tests/config/: application_settings_test.py
tests/database/: click_database_test.py  link_database_test.py
tests/database/tokens/: login_token_database_test.py  refresh_token_database_test.py
tests/services/: click_service_test.py  email_service_test.py  geoip_service_test.py  link_service_test.py  user_service_test.py
tests/services/tokens/: access_token_service_test.py  login_token_service_test.py  refresh_token_service_test.py
