# Build System
[build-system]
  requires = ["uv_build>=0.11.3,<0.12"]
  build-backend = "uv_build"

# Project Metadata
[project]
  name = "lnkr-api"
  version = "0.0.0"
  description = "Link manager REST API."
  authors = [{ name = "Daniel Mizsak", email = "daniel@mizsak.com" }]
  requires-python = ">=3.14"
  dependencies = [
    "PyJWT==2.12.1",
    "SQLAlchemy[asyncio]==2.0.49",
    "alembic[tz]==1.18.4",
    "fastapi[standard]==0.136.1",
    "httpx==0.28.1",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.0",
    "redis==7.4.0",
    "sentry-sdk==2.58.0",
  ]

  [project.urls]
    Homepage = "https://api.lnkr.by"
    Repository = "https://github.com/daniel-mizsak/lnkr-api"

[dependency-groups]
  dev = [
    { include-group = "lint" },
    "ansible-lint==26.4.0",
    "beautifulsoup4==4.14.3",
    "coverage==7.13.5",
    "fakeredis==2.35.1",
    "prek==0.3.11",
    "pytest-asyncio==1.3.0",
    "pytest==9.0.3",
    "testcontainers[postgres]==4.14.2",
    "ty==0.0.34",
  ]
  lint = ["ruff==0.15.12"]
  deployment = ["ansible==13.6.0"]

# Tools
# Pytest
[tool.pytest.ini_options]
  asyncio_mode = "auto"
  testpaths = ["tests"]

# Uv
[tool.uv]
  exclude-newer = "1 week"

  [tool.uv.build-backend]
    module-root = "src"
    module-name = "lnkr"
