# Build System
[build-system]
  requires = ["uv_build>=0.11.3,<0.12"]
  build-backend = "uv_build"

# Project Metadata
[project]
  name = "lnkr-api"
  version = "0.0.0"
  description = "Link manager REST API."
  authors = [{ name = "Daniel Mizsak", email = "daniel@mizsak.com" }]
  requires-python = ">=3.14"
  dependencies = [
    "PyJWT==2.13.0",
    "SQLAlchemy[asyncio]==2.0.50",
    "alembic[tz]==1.18.4",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "fastapi[standard]==0.136.3",
    "geoip2==5.2.0",
    "httpx==0.28.1",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.1",
    "redis==8.0.0",
    "sentry-sdk==2.61.1",
  ]

  [project.urls]
    Homepage = "https://api.lnkr.by"
    Repository = "https://github.com/daniel-mizsak/lnkr-api"

[dependency-groups]
  dev = [
    { include-group = "lint" },
    "ansible-lint==26.4.0",
    "beautifulsoup4==4.14.3",
    "coverage==7.14.1",
    "fakeredis==2.36.0",
    "prek==0.4.3",
    "pytest-asyncio==1.4.0",
    "pytest==9.0.3",
    "testcontainers[postgres]==4.14.2",
    "ty==0.0.42",
  ]
  lint = ["ruff==0.15.15"]
  deployment = ["ansible==14.0.0"]

# Tools
# Pytest
[tool.pytest.ini_options]
  asyncio_mode = "auto"
  testpaths = ["tests"]

# Uv
[tool.uv]
  exclude-newer = "1 week"

  [tool.uv.build-backend]
    module-root = "src"
    module-name = "lnkr"
