# Build System
[build-system]
  requires = ["uv_build>=0.11,<0.12"]
  build-backend = "uv_build"

# Project Metadata
[project]
  name = "lnkr-api"
  version = "0.0.0"
  description = "Link manager REST API."
  authors = [{ name = "Daniel Mizsak", email = "daniel@mizsak.com" }]
  requires-python = ">=3.14"
  dependencies = [
    "PyJWT==2.13.0",
    "SQLAlchemy[asyncio]==2.0.51",
    "alembic[tz]==1.18.4",
    "anyio==4.14.0",
    "argon2-cffi==25.1.0",
    "fastapi[standard]==0.138.0",
    "geoip2==5.2.0",
    "httpx2==2.4.0",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "redis==8.0.0",
    "segno==1.6.6",
    "sentry-sdk==2.63.0",
    "ua-parser[regex]==1.0.2",
  ]

  [project.urls]
    Homepage = "https://api.lnkr.by"
    Repository = "https://github.com/daniel-mizsak/lnkr-api"

[dependency-groups]
  dev = [
    { include-group = "lint" },
    "ansible-lint==26.4.0",
    "beautifulsoup4==4.15.0",
    "coverage==7.14.2",
    "fakeredis==2.36.2",
    "prek==0.4.5",
    "pytest-asyncio==1.4.0",
    "pytest==9.1.1",
    "testcontainers[postgres]==4.14.2",
    "ty==0.0.51",
  ]
  lint = ["ruff==0.15.18"]
  deployment = ["ansible==14.1.0"]

# Tools
# Pytest
[tool.pytest.ini_options]
  asyncio_mode = "auto"
  testpaths = ["tests"]

# Uv
[tool.uv]
  exclude-newer = "1 week"

  [tool.uv.build-backend]
    module-root = "src"
    module-name = "lnkr"
